--- a/_posts/2019-02-23-awesome.md
+++ b/_posts/2019-02-23-awesome.md
@@ -3,7 +3,7 @@ layout: post
 title: "开站宣言"
 date: 2019-02-23 10:00:00 +0800
 catalog: true
-image: /images/head.png
+image: /images/outline/blog-head-img.png
 category: person
 ---
 
@@ -19,7 +19,7 @@ category: person
 
 主要的大纲如下：
 
-![大纲](/images/document_outline_xmind.png)
+![大纲](/images/outline/document_outline_xmind.png)
 
 希望通过博客的方式，帮助他人，也提升自己。
 
